force-app/main/default/objects/cgc_sync__Sync_Config__c/cgc_sync__Sync_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for CG Cloud Mobile Sync</description>
    <label>Sync Configuration</label>
</CustomObject>