force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Analyze_Threshold__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Analyze_Threshold__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Threshold value for DB analyze. Ranges from 100 to 100000.</description>
    <label>Analyze Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>