force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Back_End_KPIs_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Back_End_KPIs_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this value is set to True, the system allocates additional computational resources to gather performance statistics at runtime. The defualt value is False.</description>
    <inlineHelpText>If set to true the back-end spends additional effort (computational resources) to gather statistics about performance at runtime. Default is false so that there is no performance penalty involved out of the box.</inlineHelpText>
    <label>Back-End KPIs Enabled</label>
    <type>Checkbox</type>
</CustomField>