force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Batch_Soql_Page_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Batch_Soql_Page_Size_Limit__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>Stores the batch SOQL page size limit in bytes.</description>
    <inlineHelpText>Maximum allowed page size. Lower limit 1000. Upper limit 50000. Recommended value 5000.</inlineHelpText>
    <label>Batch Soql Page Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>