force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Batch_Soql_Response_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Batch_Soql_Response_Time_Limit__c</fullName>
    <defaultValue>4000</defaultValue>
    <description>Batch SOQL response time in milliseconds. Range: 2000-4000. Recommended value: 4000.</description>
    <inlineHelpText>Value in ms. Lower limit 2000. Upper limit 4000. Recommended value 2000.</inlineHelpText>
    <label>Batch Soql Response Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>