force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Business_Area_Mapping__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Business_Area_Mapping__c</fullName>
    <description>Use this setting to segregate the data you want to exchange with the offline app. This setting maps the business area segregation key of the sync package with your project specific segregation key. You can only specify a fully qualified api name of a field from the User object. For example, $User.&lt;FIELDNAME&gt;</description>
    <inlineHelpText>Map a field from the User entity to segregate data downloaded to a mobile device based on Business Area.</inlineHelpText>
    <label>Business Area Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>