force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__CPU_Time_Calculation_Buffer__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__CPU_Time_Calculation_Buffer__c</fullName>
    <defaultValue>6500</defaultValue>
    <description>Buffer time in milliseconds that system includes into CPU Time limit calculations to protect the system of the Apex CPU time limit exceptions during sync processes.</description>
    <inlineHelpText>Buffer time in milliseconds that system includes into CPU Time limit calculations to protect the system of the Apex CPU time limit exceptions during sync processes. Recommended value 6500.</inlineHelpText>
    <label>CPU Time Calculation Buffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>