force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Download_Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Download_Heap_Size_Limit__c</fullName>
    <defaultValue>5242500</defaultValue>
    <description>Stores the download heap size limit in bytes.</description>
    <inlineHelpText>Value in bytes. Lower limit 1048576 (1 MB). Upper limit 6291456 (6 MB). Recommended value 5242500 (5 MB).</inlineHelpText>
    <label>Download Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>