force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Download_Page_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Download_Page_Size_Limit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Number of records to be processed inside Apex endpoint until paging starts.</description>
    <inlineHelpText>Maximum allowed page size. Lower limit 1000. Upper limit 50000. Recommended value 1000.</inlineHelpText>
    <label>Download Page Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>