force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Download_Response_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Download_Response_Time_Limit__c</fullName>
    <defaultValue>3000</defaultValue>
    <description>Download response time in milliseconds. Range: 2000-4000. Recommended value: 3000.</description>
    <inlineHelpText>Value in ms. Lower limit 3000. Upper limit 4000. Recommended value 3000.</inlineHelpText>
    <label>Download Response Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>