force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Encryption_Platforms__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Encryption_Platforms__c</fullName>
    <defaultValue>&apos;iOS,Android&apos;</defaultValue>
    <description>Comma separated list of operating systems, iOS, and Android. The mentioned systems activate encryption.</description>
    <label>Encryption Platforms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>