force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Ignore_Client_Overrides__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Ignore_Client_Overrides__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ignore client overrides.</description>
    <inlineHelpText>If this checkbox is checked, then the client requests to override the limit values will be ignored.</inlineHelpText>
    <label>Ignore Client Overrides</label>
    <type>Checkbox</type>
</CustomField>