force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Last_Generated_LU_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Generated_LU_Name__c</fullName>
    <defaultValue>&apos;100a&apos;</defaultValue>
    <description>Host the last generated Logical Unit (LU) value that was generated in the back-end.</description>
    <label>Last Generated LU Name</label>
    <length>4</length>
    <type>Text</type>
</CustomField>