force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Max_Error_Events_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Max_Error_Events_Per_Period__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The maximum number of error events a device can send in a period of time (set in Events period field), when log level field is set to Error.</description>
    <inlineHelpText>The maximum number of error events a device can send in a period of time (set in Events Period field) when Log Level field is set to Error.
Recommended value 100.</inlineHelpText>
    <label>Max Error Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>