force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Max_Other_Events_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Max_Other_Events_Per_Period__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>The maximum number of events a device can send in a period of time (set in Events period field), when log level field is set to Debug, Info, or Log.</description>
    <inlineHelpText>The maximum number of events a device can send in a period of time (set in Events Period field) when Log Level field is set to: Debug, Info or Log.
Recommended value 5000.</inlineHelpText>
    <label>Max Other Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>