force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Named_Query_Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Named_Query_Heap_Size_Limit__c</fullName>
    <defaultValue>5242880</defaultValue>
    <description>Named query heap size limit in bytes.</description>
    <label>Named Query Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>