force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Named_Query_Response_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Named_Query_Response_Time_Limit__c</fullName>
    <defaultValue>3000</defaultValue>
    <description>Named query response time limit in milliseconds.</description>
    <inlineHelpText>Value in ms. If you set this to a value higher than 3000 (3 seconds), you might get some API errors about too many concurrent long running transactions.</inlineHelpText>
    <label>Named Query Response Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>