force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__NFT_Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__NFT_Heap_Size_Limit__c</fullName>
    <defaultValue>5242500</defaultValue>
    <description>Named Fetch Tree heap size in bytes. Range: 1048576 (1MB) - 6291456 (6MB). Recommended value: 5242500 (5MB).</description>
    <inlineHelpText>Value in bytes. Lower limit 1048576 (1 MB). Upper limit 6291456 (6 MB). Recommended value 5242500 (5 MB).</inlineHelpText>
    <label>NFT Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>