force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__NFT_Page_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__NFT_Page_Size_Limit__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Maximum allowed page size for Named Fetch Tree (in bytes). Range: 1000 - 50000.</description>
    <inlineHelpText>Maximum allowed page size. Lower limit 1000. Upper limit 50000. Recommended value 10000.</inlineHelpText>
    <label>NFT Page Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>