force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__SObject_Describe_Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SObject_Describe_Heap_Size_Limit__c</fullName>
    <defaultValue>3000000</defaultValue>
    <description>Heap size limit of sObject Describe in bytes.</description>
    <inlineHelpText>Value in bytes. Lower limit 2097152 (2 MB). Upper limit 6291456 (6 MB). Recommended value 3000000 (3 MB).</inlineHelpText>
    <label>SObject Describe Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>