force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__SObject_Describe_Response_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SObject_Describe_Response_Time_Limit__c</fullName>
    <defaultValue>4000</defaultValue>
    <description>Response time limit of sObject Describe in milliseconds.</description>
    <inlineHelpText>Value in ms. Lower limit 2000. Upper limit 4000. Recommended value 4000.</inlineHelpText>
    <label>SObject Describe Response Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>