force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_Background_SyncType__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Background_SyncType__c</fullName>
    <description>&quot;Available options for sync types:
        Upload only
        Upload &amp; download(complete sync)
        Deactivated&quot;</description>
    <label>Background Sync Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>