force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_Concurrent_Users_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Concurrent_Users_Limit__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Maximum number of users who can perform synchronization simultaneously.</description>
    <inlineHelpText>The maximum number of users who can perform sync simultaneously when the Queue sync users at maximum limit setting is enabled in Sync Settings. Specify a value from 2 to 600. Default is 200.</inlineHelpText>
    <label>Max Concurrent Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>