force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_Interval__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Interval__c</fullName>
    <description>Contains the background sync interval in minutes.</description>
    <inlineHelpText>Values in Minutes.
Minimum value: 10
Maximum value: 9999</inlineHelpText>
    <label>Background Sync Interval [min]</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>