force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_On_Online__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_On_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It executes the last sync attempt that did not complete and is triggered when an online connection is available. It mainly synchronizes the tracked objects.
        Stores the value true when sync is done online.</description>
    <label>Sync On Online</label>
    <type>Checkbox</type>
</CustomField>