force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_On_Resume__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_On_Resume__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It executes the last sync that did not complete and happens when the device resumes from the background. It mainly synchronizes the tracked objects.
        Stores the value true when sync resumes.</description>
    <inlineHelpText>When this option is selected, the app syncs when resumed from background. Restarts the last incomplete sync.</inlineHelpText>
    <label>Sync On Resume</label>
    <type>Checkbox</type>
</CustomField>