force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_On_Startup__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_On_Startup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This synchronization option is triggered every time the application is launched. Tracked Objects and NFTs are optional for this synchronization method. This mainly synchronizes the schema and the runtime artifacts (RTAs).
        Stores the value true when sync is on start.</description>
    <inlineHelpText>When this option is selected and the app is launched, the background sync is executed, the app syncs schema updates, and downloads and deploys runtime artifacts (RTAs). When this option isn’t selected and the app is launched, the app syncs the schema updates and the RTAs are executed, but the background sync isn’t executed.</inlineHelpText>
    <label>Sync On Startup</label>
    <type>Checkbox</type>
</CustomField>