force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Sync_Upload_Chunk_Weight__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Upload_Chunk_Weight__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Defines the total size of the records contained by any given upload request. The record weight is directly proportional to the computational resources required.
        Example: if you are uploading an Account and an Order record, where the Account tracked object&apos;s weight is 10, and the Order tracked object&apos;s weight is 5, then your upload requests total weight is 15 (the sum of all records weights).</description>
    <inlineHelpText>Defines the total weight of the records contained by any given upload request.
Weight refers to the size of the records in total, but not the number of them. therefore associated with more computational resources used when processing that record.</inlineHelpText>
    <label>Sync Upload Chunk Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>