force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Upload_Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Upload_Heap_Size_Limit__c</fullName>
    <defaultValue>134217728</defaultValue>
    <description>Heap size upload in bytes.</description>
    <label>Upload Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>