force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Upload_Page_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Upload_Page_Size_Limit__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Upload page size in bytes.</description>
    <label>Upload Page Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>