force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Upload_Response_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Upload_Response_Time_Limit__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>Upload response time limit in milliseconds.</description>
    <label>Upload Response Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>