force-app/main/default/objects/cgc_sync__Sync_Config__c/fields/cgc_sync__Vertical_Namespace__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Vertical_Namespace__c</fullName>
    <description>Namespace of the vertical package using this Sync configuration.</description>
    <label>Vertical Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>